# Solomon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SolomonWin32Entry.c
Examples/: CMakeLists.txt
Examples/HelloSolomon/: CMakeLists.txt  Main.c
Examples/VulkanSurface/: CMakeLists.txt  CompileShaders.sh  Main.c  Shader.frag  Shader.frag.spv  Shader.vert  Shader.vert.spv
Include/: Solomon.h
Source/: CMakeLists.txt  SolomonCommon.c  SolomonCommon.h  SolomonCommonUI.c
Source/Win32/: CMakeLists.txt  CreateWindow.c  Events.c  Proc.c  SolomonInit.c  SolomonWin32.h  SolomonWin32Entry.c  Vulkan.c
Source/XCB/: CMakeLists.txt  Connection.c  CreateWindow.c  Events.c  Vulkan.c  XCB_Common.h
